# graphic4android

./: README.MD  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/onzhou/graphic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/onzhou/graphic/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/onzhou/graphic/: ExampleUnitTest.java
common/src/main/: AndroidManifest.xml
common/src/main/java/com/onzhou/common/base/: AbsBaseActivity.java  AbsGLSurfaceActivity.java  BaseApplication.java
common/src/main/java/com/onzhou/common/core/: AppCore.java
common/src/main/java/com/onzhou/common/task/: AssertReleaseTask.java
common/src/main/java/com/onzhou/common/utils/: ResReadUtils.java  ShaderUtils.java  TextureUtils.java
gauss-bitmap/: CMakeLists.txt
gauss-bitmap/src/main/java/com/onzhou/graphic/: GaussBitmap.java
gauss-native/: build.gradle
gauss-native/src/main/cpp/: gauss_bitmap.c  gauss_bitmap.h
gradle/wrapper/: gradle-wrapper.properties
native-gauss/: build.gradle
native-gauss/src/main/cpp/: gauss_bitmap.c
native-gauss/src/main/java/com/onzhou/graphic/: MainActivity.java
native-gauss/src/main/res/layout/: activity_main.xml
native-jpeg-turbo/build_scripts/: build_jpeg.sh  config.sh
native-jpeg-turbo/src/androidTest/java/com/onzhou/libjpeg/turbo/: ExampleInstrumentedTest.java
native-jpeg-turbo/src/main/: AndroidManifest.xml
native-jpeg-turbo/src/main/cpp/: native_image.cpp  native_image.h
native-jpeg-turbo/src/main/java/com/onzhou/libjpeg/turbo/loader/: NativeImageLoader.java
native-jpeg-turbo/src/main/java/com/onzhou/libjpeg/turbo/main/: NativeImageActivity.java
native-libjpeg-turbo/: CMakeLists.txt
native-libjpeg-turbo/build_scripts/: build_jpeg_all.sh
native-libjpeg-turbo/src/main/res/values/: strings.xml
native-libjpeg-turbo/src/test/java/com/onzhou/libjpeg/turbo/: ExampleUnitTest.java
native-libpng/: CMakeLists.txt
native-libpng/src/androidTest/java/com/onzhou/graphic/png/: ExampleInstrumentedTest.java
native-libpng/src/main/: AndroidManifest.xml
native-libpng/src/main/cpp/: native_png.h
native-libpng/src/main/cpp/include_png/: pngpriv.h
native-libpng/src/main/java/com/onzhou/graphic/main/: NativePngActivity.java
native-libpng/src/main/java/com/onzhou/graphic/png/: NativePngLoader.java
native-libpng/src/main/res/values/: strings.xml
native-libyuv/: CMakeLists.txt
native-libyuv/src/androidTest/java/com/onzhou/graphic/libyuv/: ExampleInstrumentedTest.java
native-libyuv/src/main/: AndroidManifest.xml
native-libyuv/src/main/cpp/: native_yuv.cpp  native_yuv.h
native-libyuv/src/main/java/com/onzhou/graphic/libyuv/: NativeYUV.java
native-libyuv/src/main/java/com/onzhou/graphic/main/: NativeYUVActivity.java
native-libyuv/src/main/res/layout/: activity_native_yuv.xml
native-libyuv/src/main/res/values/: strings.xml
native-libyuv/src/test/java/com/onzhou/graphic/libyuv/: ExampleUnitTest.java
native-png/src/main/cpp/: native_png.cpp  native_png.h
native-png/src/main/cpp/include_png/: png.h  pngstruct.h
native-png/src/main/java/com/onzhou/graphic/main/: NativePngActivity.java
native-png/src/main/res/values/: strings.xml
native-png/src/test/java/com/onzhou/graphic/png/: ExampleUnitTest.java
native-yuv2image/: CMakeLists.txt
native-yuv2image/src/androidTest/java/com/onzhou/graphic/yuv2image/: ExampleInstrumentedTest.java
native-yuv2image/src/main/: AndroidManifest.xml
native-yuv2image/src/main/cpp/: native_yuv2image.cpp  native_yuv2image.h  native_yuv2jpeg.cpp  native_yuv2jpeg.h  native_yuv2png.cpp  native_yuv2png.h  native_yuvutils.cpp  native_yuvutils.h
native-yuv2image/src/main/java/com/onzhou/graphic/main/: NativeGraphicActivity.java
native-yuv2image/src/main/java/com/onzhou/graphic/yuv2image/: NativeYUV2IMAGE.java  NativeYUV2JPEG.java
native-yuv2image/src/main/res/layout/: activity_native_yuv2image.xml  activity_native_yuv2jpeg.xml
native-yuv2image/src/main/res/values/: strings.xml
native-yuv2image/src/test/java/com/onzhou/graphic/yuv2image/: ExampleUnitTest.java
native-yuv2jpeg/: CMakeLists.txt  build.gradle
native-yuv2jpeg/src/androidTest/java/com/onzhou/graphic/yuv2jpeg/: ExampleInstrumentedTest.java
native-yuv2jpeg/src/main/: AndroidManifest.xml
native-yuv2jpeg/src/main/cpp/: native_yuv2jpeg.cpp  native_yuv2jpeg.h
native-yuv2jpeg/src/main/java/com/onzhou/graphic/main/: NativeGraphicActivity.java
native-yuv2jpeg/src/main/java/com/onzhou/graphic/yuv2jpeg/: NativeYUV2JPEG.java
native-yuv2jpeg/src/main/res/values/: strings.xml
native-yuv2jpeg/src/test/java/com/onzhou/graphic/yuv2jpeg/: ExampleUnitTest.java
native-yuv2rgb/: CMakeLists.txt  build.gradle
native-yuv2rgb/src/androidTest/java/com/onzhou/graphic/yuv2rgb/: ExampleInstrumentedTest.java
native-yuv2rgb/src/main/: AndroidManifest.xml
native-yuv2rgb/src/main/assets/: input.yuv  nv12.yuv  nv21.yuv
native-yuv2rgb/src/main/cpp/: native_yuv2rgb.cpp  native_yuv2rgb.h
native-yuv2rgb/src/main/java/com/onzhou/graphic/main/: NativeYUV2RGBActivity.java
native-yuv2rgb/src/main/java/com/onzhou/graphic/yuv2rgb/: NativeYUV2RGB.java
native-yuv2rgb/src/main/res/layout/: activity_native_yuv2rgb.xml
native-yuv2rgb/src/main/res/values/: strings.xml
native-yuv2rgb/src/test/java/com/onzhou/graphic/yuv2rgb/: ExampleUnitTest.java
